common-applications/test-environment/opengauss-website-revision/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app: opengauss-website-revision
  name: opengauss-website-revision
