common-applications/test-environment/opengauss-website-revision/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: website-service
  namespace: opengauss-website-revision
spec:
  ports:
  - name: https-port
    protocol: TCP
    port: 80
    targetPort: 80
  selector:
    app: website
  type: ClusterIP
