common-applications/test-environment/opengauss-website-revision/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/server-snippet: |
      rewrite ^/zh/docs/(.*)                              https://docs.opengauss.org/zh/docs/$1 redirect;
      rewrite ^/zh/blogs/blogs.html                       /zh/blogs/? redirect;
      rewrite ^/zh/video.html$                            /zh/video/ redirect;
      rewrite ^/zh/security-advisories.html$              /zh/security-advisories/ redirect;
      rewrite ^/zh/cve.html$                              /zh/cve/ redirect;
      rewrite ^/zh/summit.html                            /zh/summit/summit2022/  permanent;
      rewrite ^/zh/summit2021.html                        /zh/summit/summit2021/  permanent;
    nginx.ingress.kubernetes.io/configuration-snippet: |
      add_header X-XSS-Protection "1; mode=block";
      add_header Strict-Transport-Security "max-age=31536000";
      add_header Content-Security-Policy "script-src 'self' *.baidu.com ers.baidu.com 'unsafe-inline'; object-src 'none'; frame-ancestors https://vhall.huawei.com";
  name: opengauss-website-ingress
  namespace: opengauss-website-revision
spec:
  tls:
    - hosts:
      - opengauss-website.test.osinfra.cn
      secretName: opengauss-website-tls
  rules:
    - host: opengauss-website.test.osinfra.cn
      http:
        paths:
        - backend:
            serviceName: website-service
            servicePort: 80
          path: /
